# openclip

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml  streamlit_app.py  video_orchestrator.py
archive/: add_titles_engaging_clips.py  add_titles_engaging_clips_artistic.py  add_titles_moviepy.py  bilibili_downloader.py  bilibili_downloader_browser.py  chinese_text_overlay.py  generate_clips.py  generate_engaging_clips.py  generate_simple_clips.py  processing_components.py  qwen_video_assistant.py  raw_0122.srt  simple_chinese_overlay.py  subtitle_helper.py  video.txt
core/: __init__.py  clip_generator.py  config.py  cover_image_generator.py  engaging_moments_analyzer.py  qwen_api_client.py  title_adder.py  transcript_generation_whisper.py  video_splitter.py  video_utils.py
docs/: ARTISTIC_STYLES_REFERENCE.md  ARTISTIC_TITLES_GUIDE.md  BACKGROUND_INTEGRATION_GUIDE.md  CHANGELOG.md  COVER_FINAL_UPDATE.md  COVER_GENERATION_UPDATE.md  DIRECTORY_STRUCTURE.md  QUICK_START_GUIDE.md  README_COMPLETE_CHINESE_OVERLAY_GUIDE.md  README_bilibili_downloader.md  README_chinese_overlay.md  README_orchestrator_updates.md  README_qwen_integration.md  README_video_orchestrator.md  README_video_splitter.md  REORGANIZATION_SUMMARY.md  SKIP_ANALYSIS_FEATURE.md  add_titles_guide.md
examples/: example_qwen_workflow.py  example_usage.py
prompts/: engaging_moments_agg_requirement.md  engaging_moments_part_requirement.md
tests/: test_ai_json_parsing.py  test_all_new_artistic_styles.py  test_artistic_on_video_sample.py  test_artistic_with_banner.py  test_cover_generation.py  (+6 more)
(+14 files in other folders)
