[project]
name = "openclip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "moviepy>=1.0.3",
    "imageio-ffmpeg>=0.4.0",
    "yt-dlp @ git+https://github.com/yt-dlp/yt-dlp.git@master",
    "requests>=2.31.0",
    "streamlit>=1.30.0",
    "openai-whisper>=20231117",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access",
    "bilibili: marks tests specific to Bilibili platform",
    "youtube: marks tests specific to YouTube platform",
    "local_video: marks tests for local video file processing",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]
